--- a/Css_Boostrap/Usando_Boostrap.html
+++ b/Css_Boostrap/Usando_Boostrap.html
@@ -62,7 +62,7 @@
             <P>
                 <label>
                     <input type="checkbox" name="EXTRAS" value="baby">
-                    Sila de bebe
+                    Sila de Bebe
                 </label>
             </P>
 
